# mpc2000xl-clone

./: .gitignore  Cargo.toml  README.md
.github/workflows/: desktop-release.yml  direct-sample-flip-ui-cleanup.yml  pr-cleanup-test.yml
apps/desktop/: Cargo.toml  build.rs
apps/desktop/src/: main.rs  main_generated.rs  sample_flip_main.rs
crates/mpc_audio/: Cargo.toml
crates/mpc_audio/src/: lib.rs
crates/mpc_conformance/: Cargo.toml
crates/mpc_conformance/src/: lib.rs  main.rs
crates/mpc_conformance/tests/: fixtures.rs
crates/mpc_conformance/tests/fixtures/: count_in_click_transport.json  disk_project_operations_round_trip.json  host_audio_capture_voice_lifecycle.json  host_audio_device_output_probe.json  host_audio_disabled_ignore.json  main_screen.json  main_screen_cursor_tempo.json  main_screen_soft_key_track.json  midi_note_off_release_foundation.json  midi_note_on_a01_synthetic_audio_render.json  midi_output_capture_foundation.json  midi_settings_base_note_40_round_trip.json  pad_bank_switching_b_record_round_trip.json  program_pad_clear_reassign.json  program_pad_main_strike_assignment.json  program_pad_mute_group_render.json  program_pad_parameter_edit_render.json  program_pad_synthetic_audio_render.json  project_file_storage_restore_validation.json  project_persistence_assigned_pad_round_trip.json  runtime_wav_import_foundation.json  sample_catalog_navigation_b_trim_round_trip.json  sample_record_import_metadata_round_trip.json  sample_trim_edit_round_trip.json  sequence_event_erase_last_banked_round_trip.json  sequence_loop_locate.json  sequence_playback_scheduled_recorded_event.json  sequence_recording_assigned_pad_metadata.json  sequence_recording_overdub_tick_pad.json  sequence_recording_rec_play.json  sequence_track_mute_playback.json  setup_preferences_round_trip.json  song_mode_chain_editor_round_trip.json  timing_correct_quantized_record_restore_playback.json
crates/mpc_core/: Cargo.toml
crates/mpc_core/src/: events.rs  lcd.rs  lib.rs  sample_flip.rs  state.rs
crates/mpc_core/tests/: core_flow.rs  sample_flip.rs
crates/mpc_firmware_spike/: Cargo.toml
crates/mpc_firmware_spike/src/: lib.rs  main.rs
crates/mpc_firmware_spike/tests/: image_report.rs
crates/mpc_midi/: Cargo.toml
crates/mpc_midi/src/: lib.rs
crates/mpc_storage/: Cargo.toml
crates/mpc_storage/src/: lib.rs
docs/evidence/: behavior-matrix.json  foundation-completion.md  source-map.md
docs/feature/mpc2000xl-clone/: desktop-release.md  release-marker.md  review-cleanup-status.md  review-cleanup-trigger.txt  sample-flip-workflow.md
docs/superpowers/plans/: 2026-06-13-mpc2000xl-count-in-click-foundation.md  2026-06-13-mpc2000xl-disk-mode-project-operations.md  2026-06-13-mpc2000xl-full-app-foundation.md  2026-06-13-mpc2000xl-host-audio-plumbing.md  2026-06-13-mpc2000xl-main-screen-editing.md  2026-06-13-mpc2000xl-midi-note-input.md  2026-06-13-mpc2000xl-midi-settings-mode.md  (+26 more)
scripts/: verify.sh
tools/: check_assets.py
(+7 files in other folders)
