[workspace]
members = [
  "crates/mpc_core",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.92"
authors = ["MPC2000XL Clone Contributors"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
eframe = "0.34.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
