[package]
name = "mpc_desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
eframe.workspace = true
mpc_audio = { path = "../../crates/mpc_audio" }
mpc_core = { path = "../../crates/mpc_core" }
mpc_storage = { path = "../../crates/mpc_storage" }
