[package]
name = "mpc_desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
build = "build.rs"
autobins = false

[[bin]]
name = "mpc_desktop"
path = "src/sample_flip_main.rs"

[dependencies]
eframe.workspace = true
mpc_audio = { path = "../../crates/mpc_audio" }
mpc_core = { path = "../../crates/mpc_core" }
mpc_midi = { path = "../../crates/mpc_midi" }
mpc_storage = { path = "../../crates/mpc_storage" }
