[package]
name = "mpc_audio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
cpal.workspace = true
hound.workspace = true
mpc_core = { path = "../mpc_core" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
