[package]
name = "mpc_conformance"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mpc_audio = { path = "../mpc_audio" }
mpc_core = { path = "../mpc_core" }
mpc_midi = { path = "../mpc_midi" }
mpc_storage = { path = "../mpc_storage" }
serde.workspace = true
serde_json.workspace = true
